Update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ MONGODB_URL=mongodb://localhost:27017/roofresourcedash
 PORT=8000
 NODE_ENV=development
 JWT_SECRET=YOUR_SECRET
+
+DEFAULT_PASSWORD=12345678
+SUPER_ADMIN=admin@admin.com
+
+PAYMENT_LINK=http://localhost:3000/app/invoice
